tests/paczka1/fuzzy1/19523992.err
Error in line 7: 9gM A225 38,4
Error in line 10: 9gM A935 87,6
Error in line 14: 9gM A225 18,1
Error in line 18: S379 S379 83,8
Error in line 22: 9gM S147 40,2
Error in line 24: S379 S147 13,5
Error in line 35: pBp8 A225 152,16
Error in line 37: S379 S379 74,36
Error in line 30: S379 A225 89,8
